CSS Layout - width and max-width
Informações sobre definição de comprimentos de elementos no CSS.
Interessante:
- Acho que é melhor evitar valores absolutos de comprimento.

--- a/_textos-css-tutorial/18-css-display.html
+++ b/_textos-css-tutorial/18-css-display.html
@@ -6,45 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>CSS Layout - The display Property</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="stylesheet" href="../_css/css-display.css">
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
-    <style>
-        .example, div.list li, .example3 {
-            border: 4px solid green;
-            padding: 5px;   
-        }
-        .example3 {
-            margin: 0 auto 0 auto;
-            width: 35vw;
-        }
-
-        div.list {
-            text-align: center;
-        }
-
-        div.list li {
-            display: inline;
-        }
-
-        div.example2 {
-            text-indent: 25px;
-        }
-        
-        span.block {
-            display: block;
-        }
-
-        h2.none {
-            display: none;
-        }
-
-        h2.visibility {
-            visibility: hidden;
-        }
-    </style>
 </head>
 <body>
-    <div id="link">
-        <div id="explicacao">
+    
             <h1>CSS Layout - The display Property</h1>
             <p>O "display: ;" é a propriedade mais importante do CSS para gerenciar layout.</p>
             <h2>The display Property</h2>
