CSS Position - Part 1
Informações sobre posições de elementos no CSS.
Além disso, adicionei outra class para o span no CSS. A partir daqui, se tiver algum trecho que eu não tenho certeza se o que estou dizendo está certo, basta usar: <span class="notsure"> para destacar o trecho.

Interessante
- Para poder usar propriedades como "right: ;", "left: ;", "top: ;" e "bottom: ;" defina algum valor para o "position: ;".

--- a/_textos-css-tutorial/18-css-display.html
+++ b/_textos-css-tutorial/18-css-display.html
@@ -10,7 +10,8 @@
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
 </head>
 <body>
-    
+    <div id="link">
+        <div id="explicacao">
             <h1>CSS Layout - The display Property</h1>
             <p>O "display: ;" é a propriedade mais importante do CSS para gerenciar layout.</p>
             <h2>The display Property</h2>
