Adição de arquivo CSS
Acabei esquecendo de criar o arquivo CSS do commit anterior.

--- a/_textos-css-tutorial/29-css-opacity.html
+++ b/_textos-css-tutorial/29-css-opacity.html
@@ -6,141 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Opacity / Transparency</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="stylesheet" href="../_css/css-opacity.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
-    <style>
-        div.container, div.container2, div.container4 {
-            border: 4px solid salmon;
-            border-radius: 12px;
-        }
-
-        div.small-container {
-            border: 4px solid steelblue;
-            border-radius: 12px;
-        }
-
-        div.container::after {
-            content: "";
-            clear: both;
-            display: table;
-        }
-
-        div.container2::after {
-            content: "";
-            clear: both;
-            display: table;
-        }
-
-        div.container3::after {
-            content: "";
-            clear: both;
-            display: table;
-        }
-
-        div.border {
-            width: fit-content;
-            height: fit-content;
-            margin: 0 auto 0 auto;
-            border: 4px solid steelblue;
-            border-radius: 12px;
-        }
-
-        .img img, .img2 img, .img3 img, div.hoverimg img, div.hoverimg2 img {
-            padding: 10px;
-            margin: 0px;
-        }
-
-        .img p, .img2 p, .img3 p {
-            text-indent: 0;
-            font-weight: bold;
-        }
-
-        div.container, div.container2, div.container3, div.small-container {
-            width: 80%;
-            height: fit-content;
-            padding: 10px;
-            margin: 0 auto 0 auto;
-        }
-        
-        div.img img {
-            opacity: 0.2;
-        }
-
-        div.img2 img {
-            opacity: 0.5;
-        }
-
-        div.img3 img, div.hoverimg img:hover {
-            opacity: 1;
-        }
-
-        div.hoverimg img, div.hoverimg2 img:hover {
-            opacity: 0.2;
-        }
-
-        .img, .img2, .img3, div.hoverimg, div.hoverimg2 {
-            width: 33.33%;
-            float: left;
-            text-align: center;
-        }
-
-        div.container3 p {
-            width: 25%;
-            float: left;
-            padding: 30px;
-            text-align: center;
-            text-indent: 0;
-        }
-
-        p.o-01, p.o-03, p.o-06, p.o-1 {
-            background-color: #04AA6D;
-        }
-
-        p.o-01 {
-            opacity: 0.1;
-        }
-
-        p.o-03 {
-            opacity: 0.3;
-        }
-        
-        p.o-06 {
-            opacity: 0.6;
-        }
-
-        p.rgba-01 {
-            background-color: rgba(4,170,109, 0.1);
-        }
-
-        p.rgba-03 {
-            background-color: rgba(4,170,109, 0.3);
-        }
-
-        p.rgba-06 {
-            background-color: rgba(4,170,109, 0.6);
-        }
-
-        p.rgba-1 {
-            background-color: rgba(4,170,109, 1);
-        }
-
-        div.small-container {
-            background-color: #ffffff;
-            opacity: 0.6;
-        }
-
-        div.small-container p {
-            font-weight: bold;
-        }
-
-        div.container4 {
-            padding: 20px;
-            background: url(../_imagens/fundo-minish.jpg);
-        }
-
-        div.container, div.container2, div.container3, div.container3 p, .img, .img2, .img3, div.hoverimg, div.hoverimg2, .img img, .img2 img, .img3 img {
-            box-sizing: border-box;
-        }
-    </style>
 </head>
 <body>
     <div id="link">
