--- a/_textos-css-tutorial/32-css-horizontal-navbar.html
+++ b/_textos-css-tutorial/32-css-horizontal-navbar.html
@@ -123,10 +123,15 @@
                 </ul>
             </div>
             <h2>Fixed Navigation Bar</h2>
-            <p></p>
+            <p>Use "position: fixed;" para fixar uma barra de navegação. Você pode ver esse exemplo no material anterior sobre <a target="_blank" href="31-css-vertical-navbar.html">barras de navegação vertical</a>.</p>
+            <p>Nesse caso, eu preciso fazer com que o "position: fixed;" não se baseei na tela de exibição inicial, mas sim dentro de uma div que eu criei, coisa que não sei fazer ainda. <span class="seeya">Eu só vou entender melhor como funciona mais pra frente.</span></p>
+            <p>Quando voltar, copiar o código abaixo e substituir os containers por container8 e container9.</p>
+            <h2>Sticky Navbar</h2>
+            <p>Você também pode usar "position: sticky;" para fixar uma barra de navegação.</p>
+            <p>Veja os exemplos a seguir:</p>
             <div class="container5">
                 <div class="small-container">
-                    <div class="container6">
+                    <div class="container8">
                         <ul class="border">
                             <li><a class="active" href="#">Home</a></li>
                             <li><a href="#">Notícias</a></li>
@@ -188,7 +193,7 @@
                         <p>Some text some text some text some text..</p>
                         <p>Some text some text some text some text..</p>
                     </div>
-                    <div class="container7">
+                    <div class="container9">
                         <ul class="border">
                             <li><a class="active" href="#">Home</a></li>
                             <li><a href="#">Notícias</a></li>
@@ -197,6 +202,56 @@
                         </ul>
                     </div>
                 </div>
+            </div>
+            <div class="container5">
+                <div class="small-container3">
+                    <h1>Scroll Down</h1>
+                    <p>Scroll down to see the sticky effect.</p>
+                    <div class="container8">
+                        <ul class="sticky border">
+                            <li><a class="active" href="#">Home</a></li>
+                            <li><a href="#">Notícias</a></li>
+                            <li><a href="#">Contato</a></li>
+                            <li class="right"><a href="#">Sobre</a></li>
+                        </ul>
+                    </div>
+                    <div class="article">
+                        <h3>Sticky Navigation Bar Example</h3>
+                        <p>The navbar will <strong>stick</strong> to the top when you reach its scroll position.</p>
+                        <p><strong>Note:</strong> Internet Explorer do not support sticky positioning and Safari requires a -webkit- prefix.</p>
+                        <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                        <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                        <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                        <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                        <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                        <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                        <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                    </div>
+                </div>
+            </div>
+            <h2>More Examples</h2>
+            <h3>Responsive Topnav</h3>
+            <p><span class="seeya">Eu só vou entender melhor como funciona mais pra frente.</span></p>
+            <h3>Respoonsive Sidenav</h3>
+            <p><span class="seeya">Eu só vou entender melhor como funciona mais pra frente.</span></p>
+            <h2>Dropdown Navbar</h2>
+            <p>Com tudo que aprendeu até agora é possível fazer barras de navegação com "dropdown".</p>
+            <p>Veja o exemplo a seguir:</p>
+            <div class="container10">
+                <ul>
+                    <li><a class="active" href="#">Home</a></li>
+                    <li><a href="#">Notícias</a></li>
+                    <li><a href="#">Contato</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">Dropdown</a>
+                        <div class="dropdown-content">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                    </li>
+                    <li class="right"><a href="#">Sobre</a></li>
+                </ul>
             </div>
         </div>
     </div>
