CSS Attribute Selectors - Final Part
Informações sobre selecionadores de atributos no CSS.
Interessante:
- É possível estilizar elementos do HTML que tem um atributo ou valores de atributos específicos;
- Você pode usar isso para estilizar formulários sem precisar colocar classes ou ID;
- Você pode usar esses seletores de atributo:
* [attribute="value"]
* [attribute~="value"]
* [attribute|="value"]
* [attribute^="value"]
* [attribute$="value"]
* [attribute*="value"]

Descobri enquanto fazia:
-  Quando quiser se referir a um elemento específico, coloque o [] colado do elemento, exemplo:
* Certo: .attribute3 img[title~="kinstone"]
* Errado: attribute3 img [title~="kinstone"]
- Quando quiser se referir a um elemento-pai, coloque o [] separado por um espaço desse elemento. exemplo:
* Certo: .attribute3 [title~="kinstone";
* Errado: attribute3[title~="kinstone"]

--- a/_textos-css-tutorial/36-css-attr-selectors.html
+++ b/_textos-css-tutorial/36-css-attr-selectors.html
@@ -39,7 +39,7 @@
                 <img src="../_imagens/gold-kinstone-menor.png" alt="" title="gold kinstone">
                 <img src="../_imagens/blue-kinstone-menor.png" alt="" title="blue">
                 <img src="../_imagens/green-kinstone-menor.png" alt="" title="green kinstone">
-                <img src="../_imagens/green-kinstone-menor.png" alt="" title="red">
+                <img src="../_imagens/red-kinstone-menor.png" alt="" title="red">
             </div>
             <h2>CSS [attribute|="value"] Selector</h2>
             <p>Use o seletor [attribute|="value"] para selecionar elementos com um atributo começando com um valor específico.</p>
@@ -50,7 +50,7 @@
                 <img src="../_imagens/gold-kinstone-menor.png" alt="" title="background gold kinstone">
                 <img src="../_imagens/blue-kinstone-menor.png" alt="" title="background-blue">
                 <img src="../_imagens/green-kinstone-menor.png" alt="" title="background green kinstone">
-                <img src="../_imagens/green-kinstone-menor.png" alt="" title="backgroundred">
+                <img src="../_imagens/red-kinstone-menor.png" alt="" title="backgroundred">
             </div>
             <h2>CSS [attribute^="value"] Selector</h2>
             <p>Use o seletor [attribute^="value"] para selecionar elementos com um atributo começando com o valor específico.</p>
@@ -59,29 +59,49 @@
                 <img src="../_imagens/gold-kinstone-menor.png" alt="" title="background gold kinstone">
                 <img src="../_imagens/blue-kinstone-menor.png" alt="" title="background-blue">
                 <img src="../_imagens/green-kinstone-menor.png" alt="" title="background green kinstone">
-                <img src="../_imagens/green-kinstone-menor.png" alt="" title="backgroundred">
+                <img src="../_imagens/red-kinstone-menor.png" alt="" title="backgroundred">
             </div>
             <h2>CSS [attribute$="value"] Selector</h2>
             <p>Use o seletor [attribute$="value"] para selecionar elementos com um atributo terminando com um valor específico.</p>
-            <p>No exemplo a seguir, foi adicionando uma cor de fundo aos elementos que tinham "bigger" no "title".</p>
+            <p>No exemplo a seguir, foi adicionando uma cor de fundo diferente aos elementos que tinham "bigger" no "title".</p>
             <p><span class="bold">Nesse caso, tanto faz se termina com espaço ou com traços ou se está junto de outra palavra.</span></p>
             <div class="attribute4">
                 <img src="../_imagens/gold-kinstone-menor.png" alt="" title="background gold kinstone bigger">
                 <img src="../_imagens/blue-kinstone-menor.png" alt="" title="background-blue">
-                <img src="../_imagens/green-kinstone-menor.png" alt="" title="background green kinstone bigger">
-                <img src="../_imagens/green-kinstone-menor.png" alt="" title="backgroundredbigger">
+                <img src="../_imagens/green-kinstone-menor.png" alt="" title="background green kinstone">
+                <img src="../_imagens/red-kinstone-menor.png" alt="" title="backgroundredbigger">
             </div>
             <h2>CSS [attribute*="value"] Selector</h2>
             <p>Use o seletor [attribute$="value"] para selecionar elementos com um atributo que contém um valor específico.</p>
-            <p>No exemplo a seguir, foi adicionando uma cor de fundo aos elementos que tinham "bigger" no "title".</p>
-            <div class="attribute4">
+            <p>No exemplo a seguir, foi adicionando um "outline-offset: ;" aos elementos que tinham "stone" no "title".</p>
+            <p><span class="bold">Nesse caso, tanto faz se termina com espaço ou com traços ou se está junto de outra palavra.</span></p>
+            <div class="attribute5">
                 <img src="../_imagens/gold-kinstone-menor.png" alt="" title="background gold kinstone bigger">
                 <img src="../_imagens/blue-kinstone-menor.png" alt="" title="background-blue">
                 <img src="../_imagens/green-kinstone-menor.png" alt="" title="background green kinstone bigger">
-                <img src="../_imagens/green-kinstone-menor.png" alt="" title="backgroundredbigger">
+                <img src="../_imagens/red-kinstone-menor.png" alt="" title="backgroundredbigger">
             </div>
             <h2>Styling Forms</h2>
-            <p>Os seletores de atributos podem ser úteis para estilziar formulários sem usar classes ou ID.</p>
+            <p>Os seletores de atributos podem ser úteis para estilizar formulários sem usar classes ou ID.</p>
+            <p>Veja o exemplo a seguir:</p>
+            <p><span class="bold">Sem formatação:</span></p>
+            <div class="attribute4">
+                <form name="input" action="" method="get">
+                    Primeiro nome:<input type="text" name="Name" value="Caio" size="20">
+                    Último nome:<input type="text" name="Name" value="Renan" size="20">
+                    Idade: <input type="number">
+                    <input type="button" value="Botão">
+                </form>
+            </div>
+            <p><span class="bold">Com formatação</span></p>
+            <div class="attribute5">
+                <form name="input" action="" method="get">
+                    Primeiro nome:<input type="text" name="Name" value="Caio" size="20">
+                    Último nome:<input type="text" name="Name" value="Renan" size="20">
+                    Idade: <input type="number">
+                    <input type="button" value="Botão">
+                </form>
+            </div>
         </div>
     </div>
 </body>
